--- a/gb/19/8/11/n11446085.md
+++ b/gb/19/8/11/n11446085.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/miarbj3813/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/miarbj3813/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/miarbj3813/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/miarbj3813/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/miarbj3813/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/miarbj3813/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/miarbj3813/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/miarbj3813/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台西海口故事屋-新住民多元文物展 11日登场</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年08月11日讯】（大纪元记者廖素贞台湾云林报导）云林沿海地区的新亮点~<ahref="https://github.com/miarbj3813/djy/blob/master/gb/tag/%E5%8F%B0%E8%A5%BF%E6%B5%B7%E5%8F%A3%E6%95%85%E4%BA%8B%E5%B1%8B.md#1">台西海口故事屋</a>（原台西海口庄长官舍），经过整修后6月8日起正式开“屋”，营运以来活动屡获好评，继服装设计师林国基老师“梦幻芭比娃娃与玩具展”圆满落幕后，紧接着由“<ahref="https://github.com/miarbj3813/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>多元文化文物展”接棒，琳琅满目的异国文物展，带给民众多元文化的视觉飨宴!展期8月11日至9月29日止，每周三至周日早上10点至下午5点，欢迎乡亲来体验不同的异国风情，认识多元文化的魅力，进而尊重不同的族群。</p>
-<p><ahref="https://github.com/miarbj3813/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>是台湾的新兴一代，为了让大小朋友们一起来认识新住民家乡文化，传达多元共融的精神，云林县政府特别于海口故事屋筹划越南、泰国、中国、印尼、柬埔寨五国特色文化文物展览，及七场说故事与亲子DIY活动，8月共3场、9月4场，11日上午举办开幕茶会。</p>
+<p>【大纪元2019年08月11日讯】（大纪元记者廖素贞台湾云林报导）云林沿海地区的新亮点~<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E8%A5%BF%E6%B5%B7%E5%8F%A3%E6%95%85%E4%BA%8B%E5%B1%8B.md#1">台西海口故事屋</a>（原台西海口庄长官舍），经过整修后6月8日起正式开“屋”，营运以来活动屡获好评，继服装设计师林国基老师“梦幻芭比娃娃与玩具展”圆满落幕后，紧接着由“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>多元文化文物展”接棒，琳琅满目的异国文物展，带给民众多元文化的视觉飨宴!展期8月11日至9月29日止，每周三至周日早上10点至下午5点，欢迎乡亲来体验不同的异国风情，认识多元文化的魅力，进而尊重不同的族群。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E4%BD%8F%E6%B0%91.md#1">新住民</a>是台湾的新兴一代，为了让大小朋友们一起来认识新住民家乡文化，传达多元共融的精神，云林县政府特别于海口故事屋筹划越南、泰国、中国、印尼、柬埔寨五国特色文化文物展览，及七场说故事与亲子DIY活动，8月共3场、9月4场，11日上午举办开幕茶会。</p>
 <p>本次展览品多为新住民由母国带回来的文物或服饰，包括传统服饰、乐器、交通工具、器皿、偶戏等。展览中也提供一般民众各式新住民文物知识，例如大象在泰国及柬埔寨曾是共通的交通工具；柬埔寨与越南的脚踏车造型设计相仿；印尼文物多取自大自然，如竹、木、铁，且色彩鲜艳丰富；中国大陆56族服饰、传统越南帽大异其趣的外观…等。</p>
 <p>文化处长陈璧君表示，海口故事屋开幕以来，已举办多场说故事活动，结合人文历史与地方特色经营的故事屋模式，为凝聚海口地区居民自信、扭转文化沙漠刻板印象跨出第一步，县府希望让新住民母国文化藉由策展被看见，展现出海口地区的多元文化。未来县府将持续努力，支持地方文化活动发展。</p>
 <p>责任编辑：王愉悦</p>
@@ -15,48 +15,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/19/3/29/n11148882.md#1">邀您神游陈澄波笔下的美妙山林</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/19/4/3/n11159989.md#1">新竹儿童好幸福   湳雅广场推新竹孩子的主场</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/19/4/27/n11216989.md#1">慈怀儿童月 教导幼儿自我保护</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/19/6/8/n11309136.md#1">海口屋开屋  林国基宣布 台西娃娃博物馆 正式启动</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/15/n12333368.md#1">第24届桃城美展颁奖典礼</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/15/n12333378.md#1">屏基打造石板故事屋  爷奶说演老幼共乐</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/15/n12333297.md#1">超值部落走访　屏东邮轮巴士神山线首航</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/15/n12331562.md#1">斗南国小日式宿舍修复工程 开工</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/14/n12330704.md#1">家扶助学义卖   鼓动爱与希望</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/14/n12330178.md#1">公私协力共商维护眠月线环境对策</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/3/29/n11148882.md#1">邀您神游陈澄波笔下的美妙山林</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/3/n11159989.md#1">新竹儿童好幸福 湳雅广场推新竹孩子的主场</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/4/27/n11216989.md#1">慈怀儿童月 教导幼儿自我保护</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/8/n11309136.md#1">海口屋开屋 林国基宣布 台西娃娃博物馆 正式启动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616161.md#1">乐龄生活无限好 崙背乡老人会举办成果展</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615323.md#1">111学年度大学学测 国立嘉义高中成绩亮眼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614031.md#1">屏东挖眼嫌 裁定续押居民松口气</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613827.md#1">和平与主权不应被侵犯 嘉县点灯声援乌克兰</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613686.md#1">嘉义市危老重建研习课程第二场次开跑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613776.md#1">2022年嘉义家扶爱心园游会活动即日开跑</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/7/n11169990.md#1" target="_blank">共产暴政录：老挝华人共产前后的处境变化</a></li><li><a href="https://github.com/miarbj3813/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398694.md#1" target="_blank">7·20华府演讲 大卫·乔高：中共是杀人犯</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/18/n11461393.md#1" target="_blank">“中共是所有人噩梦”美智库主席吁解体中共</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/9/n12317099.md#1">疫情下意大利圣母雕像流血泪 引民众围观</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/6/1/n12153439.md#1">违背原著的查抄荣国府</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/6/n12310782.md#1">顺天意民心退位让国 隆裕太后获盛赞</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/7/n12313595.md#1">“女子无才便是德”究竟是什么意思</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/11/1/4/n3132042.md#1">巴洛克艺术（三）鲁本斯</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/14/n12330574.md#1">【重播】川普8·14发布会：对付病毒全美动员</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/15/n12332727.md#1">【西岸观察】美国人要中共还巨债有何依据</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/14/n12330620.md#1">【纪元播报】报告：纽时及CNN等助中共宣传马克思主义</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12328205.md#1">共军宣布将在台海南北两端军演 台国防部回应</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12329194.md#1">美制裁中港高官 江家巨额海外资产引关注</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/12/n12323934.md#1">【内幕】腾讯党支部超七千党员名单曝光</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12329177.md#1">网传崔永元在北京家中昏迷 急送医院抢救</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/12/n12326221.md#1">11年前曾想回土耳其 吴凤讲述留在台湾原因</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12327881.md#1">BTS、TWICE、姜丹尼尔获2020 SOBA颁奖礼三奖</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12328960.md#1">欠债数亿豪门梦碎？甘薇称年幼儿女赚钱养家</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12328706.md#1">周庭获封港版花木兰 何韵诗：香港以你为荣</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/12/n12326290.md#1">咖啡喝多伤肾 带来这些症状！4类人不宜喝</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12329055.md#1">罗霈颖死因是服用多种药 吃13种药物要当心</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12327428.md#1">龙卷风袭击内蒙古 瞬间天黑 上百蒙古包倒塌</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12327637.md#1">惊人画面：大白鲨为捕食跃出海面4.6米</a></li>
-<li><a href="https://github.com/miarbj3813/djy/blob/master/gb/20/8/13/n12327291.md#1">中药铅中毒事件发酵 教你4招安心用药和解毒</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/miarbj3813/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/miarbj3813/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/11/n11446085.htm">台西海口故事屋-新住民多元文物展 11日登场</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/11/n11446085.htm">台西海口故事屋-新住民多元文物展 11日登场</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/miarbj3813/djy/blob/master/gb/19/8/11/n11446085.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/miarbj3813/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/miarbj3813/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/miarbj3813/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/miarbj3813/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/miarbj3813/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/8/11/n11446085.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
